Ack, ded and bio

--- a/latex/dedication.tex
+++ b/latex/dedication.tex
@@ -1,1 +1,8 @@
-To the one who taught me patience, determination, and unwavering 
+
+\begin{dedication}
+To the one who taught me patience, compassion, and determination. Thank you, mom.
+
+\begin{center}
+\emph{--E}
+\end{center}
+\end{dedication}
