--- a/latex/acknowledgments.tex
+++ b/latex/acknowledgments.tex
@@ -1,4 +1,4 @@
-\begin{acknowledgements}
+\begin{acknowledgments}
 
 Thank you to my committee. 
 
@@ -15,4 +15,4 @@ This research was funded by awards:
 
 
 
-\end{acknowledgements}
+\end{acknowledgments}
