--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -557,9 +557,9 @@ RBF-QR
 method uses a truncated expansion of RBFs in terms of spherical harmonics or Chebyshev polynomials and leverages QR factorization to create create a new well-conditioned set of basis functions to reproduce the original RBF space. The well-conditioned basis set allows stable solution independent of the value $\epsilon$. The cost of the method is demonstrated to increase as $\epsilon$ increases. Benchmarks in \cite{Fornberg2011a} show that double precision RBF-QR is between 3x-7x slower than RBF-Direct for the same values of $\epsilon$. Fornberg, Larsson and Flyer \cite{Fornberg2011a} successfully implemented the 2D method in less than 100 lines of MATLAB code and apply RBF-QR to problems with 6000 quasi-unifrom nodes and globally supported RBFs. 
 
 
-Between Contour-Pad\'{e} and RBF-QR, global RBF methods overcame many conditioning issues for small to mid-sized problems. The lack of support for large problem sizes is discouraging, but it leads to an argument in favor of local methods like RBF-FD, which decrease the problem size to fit nicely within the scope of stable methods. To our knowledge, no application of a local method has required more than a few hundred nodes per local solution. 
+Between Contour-Pad\'{e} and RBF-QR, global RBF methods overcame many conditioning issues for small to mid-sized problems. The lack of support for large problem sizes is discouraging, but it leads to an argument in favor of local methods like RBF-FD, which decrease the problem size to fit nicely within the scope of stable methods. % To our knowledge, no application of a local method has required more than a few hundred nodes per local solution. 
 
-Most recently, Fornberg et al. \cite{Fornberg2012} introduced a new method called RBF-GA, which performs a similar change of basis as RBF-QR, but the method avoids truncated infinite expansions by expressing the new basis functions in terms of an incomplete Gamma function. Unlike RBF-QR, this method is limited to Gaussian basis functions only. Interestingly, benchmarks provided in \cite{Fornberg2012} rank stable methods for RBFs from fastest to slowest as: RBF-Direct, RBF-GA, and then RBF-QR. Similar to the other methods, RBF-GA is effective for a small number of nodes: a few hundred in 2D, and at least 500 in 3D. Unlike RBF-QR, which performs a change of basis on the interpolating matrix only, the RBF-GA method requires a complicated change of basis for the RHS as well.
+Most recently, Fornberg et al. \cite{Fornberg2012} introduced a new method called RBF-GA, which performs a similar change of basis as RBF-QR, but the method avoids truncated infinite expansions by expressing the new basis functions in terms of an incomplete Gamma function. Unlike RBF-QR, this method is limited to Gaussian basis functions only. Benchmarks provided in \cite{Fornberg2012} rank stable methods for RBFs from fastest to slowest as: RBF-Direct, RBF-GA, and then RBF-QR. RBF-GA is also effective for a small number of nodes: a few hundred in 2D, and at least 500 in 3D. Unlike RBF-QR, which performs a change of basis on the interpolating matrix only, the RBF-GA method requires a complicated change of basis for the RHS as well \cite{Fornberg2012}.
 
 
 \part{RBF-FD for HPC Environments}
