--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -36,7 +36,7 @@
 \tableofcontents
 \listoftables
 \listoffigures
-%\listofalgorithms
+\listofalgorithms
 %%
 %\include{symbols}
 %\input{notation_and_symbols}
@@ -46,16 +46,16 @@
 
 \mainmatter
 
-%\include{introduction}
-%\include{related_work}
-%\include{rbffd_method}
-
+\include{introduction}
+\include{related_work}
+\include{rbffd_method}
 \include{ordering_and_preconditioning}
 %\include{distributed_solver}
 
 %\include{ViennaCL.tex}
 %\include{future_of_gpus.tex}
-%\include{explicit_pde_solutions}
+
+\include{explicit_pde_solutions}
 %\include{implicit_pde_solutions}
 %\include{performance_analysis} 
 %\include{publications}
