final edits for stencils

--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -30,8 +30,8 @@
 \maketitle
 \makecommitteepage
 %%
-\include{dedication}
-\include{acknowledgments}
+%\include{dedication}
+%\include{acknowledgments}
 %%
 \tableofcontents
 \listoftables
@@ -46,16 +46,16 @@
 
 \mainmatter
 
-\include{introduction}
-\include{related_work}
-\include{rbffd_method}
+%\include{introduction}
+%\include{related_work}
+%\include{rbffd_method}
 \include{ordering_and_preconditioning}
 %\include{distributed_solver}
 
 %\include{ViennaCL.tex}
 %\include{future_of_gpus.tex}
 
-\include{explicit_pde_solutions}
+%\include{explicit_pde_solutions}
 %\include{implicit_pde_solutions}
 %\include{performance_analysis} 
 %\include{publications}
@@ -80,7 +80,7 @@
 \bibliographystyle{plain}
 \bibliography{merged_references}
 
-\input{biography.tex}
+%\input{biography.tex}
 
 \end{document}
  
